kubernetes-config/local/api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-service
spec:
  selector:
    app: mercator-api
  ports:
    - protocol: TCP
      port: 80
