kubernetes-config/local/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: development-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.mercator.test
      http:
        paths:
          - backend:
              serviceName: api-service
              servicePort: 80
